objects/WLD_Certification__c.object
<CustomObject>
    <description>Used by WLD for Account Certifications, Recertifications, and Quarterly Certifications</description>
    <fields>
        <fullName>ATNW_Lev_Ratio__c</fullName>
        <label>ATNW Lev. Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATNW__c</fullName>
        <label>ATNW</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Certifications</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adverse_Action_Comments__c</fullName>
        <label>Adverse Action Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adverse_Action_Complete_Date__c</fullName>
        <label>Adverse Action Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adverse_Action_Start_Date__c</fullName>
        <label>Adverse Action Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendar_QTR_YR__c</fullName>
        <formula>TEXT(QLR_Quarter__c ) &amp; &quot; / &quot; &amp; TEXT(QLR_Year__c)</formula>
        <label>Calendar QTR / YR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email_2__c</fullName>
        <label>Contact Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Credit_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Review_Status__c</fullName>
        <description>Auto-populate with credit review status upon user entry in that object&apos;s status field</description>
        <label>Credit Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>On Hold - Resubmission Request</fullName>
                </value>
                <value>
                    <fullName>Submitted for Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hedging_Reports__c</fullName>
        <label>Hedging Reports</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Analyst Email</fullName>
                </value>
                <value>
                    <fullName>Analyst Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investor_Scorecards__c</fullName>
        <label>Investor Scorecards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Analyst Email</fullName>
                </value>
                <value>
                    <fullName>Analyst Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Liquidity__c</fullName>
        <label>Liquidity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRA_Exhibit_B_and_All_Schedules__c</fullName>
        <label>MRA Exhibit B and All Schedules</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Analyst Email</fullName>
                </value>
                <value>
                    <fullName>Analyst Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRA_Schedule_1_Financial_Covenants__c</fullName>
        <label>MRA Schedule 1 - Financial Covenants</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Analyst Email</fullName>
                </value>
                <value>
                    <fullName>Analyst Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notice_of_Action__c</fullName>
        <label>Notice of Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obligor_Score__c</fullName>
        <label>Obligor Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profitability__c</fullName>
        <label>Profitability</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QC_Reminder_Email_Trigger__c</fullName>
        <inlineHelpText>Send WLD a reminder email 1 and 2 weeks prior to 30 day item return requirement</inlineHelpText>
        <label>QC Reminder Email Trigger</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QLR_Owner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLR Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLR_Owner_Phone__c</fullName>
        <formula>Owner:User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLR Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLR_Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QTR1</fullName>
                </value>
                <value>
                    <fullName>QTR2</fullName>
                </value>
                <value>
                    <fullName>QTR3</fullName>
                </value>
                <value>
                    <fullName>QTR4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QLR_Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Control_Reports__c</fullName>
        <label>Quality Control Reports</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Analyst Email</fullName>
                </value>
                <value>
                    <fullName>Analyst Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - (AC/ARC/QLR) Creation</fullName>
                    <default>true</default>
                    <label>1 - (AC/ARC/QLR) Creation</label>
                </value>
                <value>
                    <fullName>2 - Documents Received and Complete</fullName>
                </value>
                <value>
                    <fullName>3 - Moody&apos;s Entry</fullName>
                </value>
                <value>
                    <fullName>4 - Analysis (AC/ARC/QLR) Complete</fullName>
                </value>
                <value>
                    <fullName>5 - Analysis (AC/ARC/QLR) Internally Audited</fullName>
                </value>
                <value>
                    <fullName>6 - Signature Submitted (Approved)</fullName>
                </value>
                <value>
                    <fullName>7 - Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_for_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted for Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNW_Lev_Ratio__c</fullName>
        <label>TNW Lev. Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNW__c</fullName>
        <label>TNW</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unaudited_Balance_Sheet_YTD__c</fullName>
        <label>Unaudited Balance Sheet YTD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Analyst Email</fullName>
                </value>
                <value>
                    <fullName>Analyst Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unaudited_P_L_YTD__c</fullName>
        <label>Unaudited P&amp;L YTD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Analyst Email</fullName>
                </value>
                <value>
                    <fullName>Analyst Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unaudited_P_L_for_the_Quarter__c</fullName>
        <label>Unaudited P&amp;L for the Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Analyst Email</fullName>
                </value>
                <value>
                    <fullName>Analyst Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unrestricted_Cash__c</fullName>
        <label>Unrestricted Cash</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Stamp_Comments__c</fullName>
        <label>User Stamp Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2nd_Credit_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd Credit Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Certifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Certification</label>
    <listViews>
        <fullName>Account_Certifications</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WLD_Certification__c.Account_Certification</value>
        </filters>
        <label>Account Certifications</label>
    </listViews>
    <listViews>
        <fullName>Account_Recertifications</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WLD_Certification__c.Account_Recertification</value>
        </filters>
        <label>Account Recertifications</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Quarterly_Certifications</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WLD_Certification__c.Quarterly_Certification</value>
        </filters>
        <label>Quarterly Certifications</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <recordTypes>
        <fullName>Account_Certification</fullName>
        <active>true</active>
        <description>Used during the initial certification process</description>
        <label>Account Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Recertification</fullName>
        <active>true</active>
        <description>Used annually for recertification</description>
        <label>Account Recertification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quarterly_Certification</fullName>
        <active>true</active>
        <description>Used quarterly</description>
        <label>Quarterly Certification</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_and_Name_fields_cant_be_editied</fullName>
        <active>true</active>
        <description>&apos;Account&apos; and &apos;Name&apos; fields cannot be edited.</description>
        <errorConditionFormula>AND( RecordType.Name = &quot;Quarterly Certification&quot;,
OR(ISCHANGED( Account__c ), ISCHANGED (Name)),
NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>&apos;Account&apos; and &apos;Name&apos; fields cannot be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Team_can_only_create_QC</fullName>
        <active>true</active>
        <description>If the user profile is Credit Office, limit to Quarterly Certification record type creation only</description>
        <errorConditionFormula>AND(
  $Profile.Name = &quot;Credit Office&quot;,
   RecordType.DeveloperName &lt;&gt; &quot;Quarterly_Certification&quot;,
  ISNEW()
)</errorConditionFormula>
        <errorMessage>Credit Office users may only create Quarterly Certification records.</errorMessage>
    </validationRules>
</CustomObject>